# empwirebot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
docs/: camera_setup.md  current_tasks.md  development_log.md  encoder_odometry_plan.md  lidar_setup.md  roadmap.md  ros2_sensor_package_test_guide.md  ros2_sensor_parser_plan.md  serial_protocol.md  software_status.md  system_architecture.md  testing_checklist.md  version_history.md
firmware/esp32/: FIRMWARE_INDEX.md  README.md
firmware/esp32/sensor_serial_v2_1/: sensor_serial_v2_1.ino
hardware/: current_hardware.md  pin_map.md
ros2_ws/src/: README.md  ROS2_PACKAGE_INDEX.md
ros2_ws/src/empwirebot_sensors/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/empwirebot_sensors/empwirebot_sensors/: sensor_serial_node.py
ros2_ws/src/empwirebot_sensors/launch/: sensor_serial.launch.py
